metoda PUT Swagger
